// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR declining 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "closeChannelCalls": [
    "12345",
  ],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "searchedCommentSnapshots": [],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "iconEmoji": ":bitbucket:",
      "text": ":no_entry_sign: Pull request was declined by Test Author.",
    },
  ],
}
`;

exports[`handleBitbucketWebhook Should send notification to the broadcast channel, if it is specified 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "closeChannelCalls": [
    "12345",
  ],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "searchedCommentSnapshots": [],
  "searchedPrOpenedBroadcastMessages": [
    {
      "channelId": "test-broadcast-channel-id",
      "prCreationDate": 2024-04-29T08:59:44.802Z,
      "pullRequestTraits": {
        "projectKey": "TEST-PROJ",
        "pullRequestId": "1",
        "repositorySlug": "test-repository",
      },
    },
  ],
  "sentMessages": [
    {
      "iconEmoji": ":bitbucket:",
      "text": ":no_entry_sign: Pull request was declined by Test Author.",
    },
  ],
}
`;
